refactor: rename Timer App to Focuso and update related documentation
- Updated all instances of "Timer App" to "Focuso" in documentation and code comments.
- Changed log storage key from 'timer-app-logs' to 'focuso-logs'.
- Introduced a new logo for Focuso and updated the favicon in the HTML.
- Added a new analytics dashboard component and integrated it into the main application.
- Established a consistent typography standard for text sizes across the application.
- Refactored components to use new stat-value and stat-label classes for better styling.
- Migrated existing log data from the old storage key to the new one during logger initialization.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/timer-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/focuso-logo-dark.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="業務効率化を目的とした多機能タイマーアプリケーション" />
     <!--
@@ -36,7 +36,7 @@
         form-action 'self';
       "
     />
-    <title>Timer App</title>
+    <title>Focuso</title>
   </head>
   <body>
     <div id="root"></div>
